# kompozit

./: Dockerfile  MANIFEST.in  README.md  komposation.yaml  kompose.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
base/: docker-compose-pg.yml  docker-compose-traefik.yml  komposation.yaml
docs/: Inline-patch.md  Multibase.md
examples/: README.md
examples/base/: docker-compose-traefik.yml  kompozition.yml
examples/output/: docker-compose-pg.yml  docker-compose-traefik.yml
examples/overlay/: docker-compose-pg-patch.yml  docker-compose-traefik-patch.yml  kompozition.yaml
examples/overlay/homeserver/: docker-compose-traefik-patch.yml  kompozition.yaml
examples/overlay/public_wordpress/: docker-compose-traefik-patch.yml  kompozition.yaml
kompozit/: __init__.py  kompozit.py
output/: docker-compose-pg.yml
overlay/: docker-compose-pg-patch.yml  komposation.yaml  test.yml
tests/: kompozit_tests.py
