[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.pylint.messages_control]
disable = [
  "C0301"
]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.report]
output-format = "colorized"

[tool.pylint.reporter]
max-line-length = 120